# PrimoArm-2026

./: LICENSE  README.md  ping_ax12.py  test_dxl.py
install/: local_setup.sh  setup.sh
install/primo-arm-r00/share/primo-arm-r00/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/primo-arm-r00/share/primo-arm-r00/launch/: display.launch.py
install/primo-arm-r00/share/primo-arm-r00/urdf/: arm.urdf.xacro
install/primo-arm-r01/share/primo-arm-r01/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/primo-arm-r01/share/primo-arm-r01/launch/: display.launch.py
install/primo-arm-r01/share/primo-arm-r01/urdf/: primio-arm-r01.urdf.xacro
install/primo_dynamixel_driver/lib/primo_dynamixel_driver/: joint_publisher
install/primo_dynamixel_driver/share/primo_dynamixel_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/primo-arm-r00/: package.xml  setup.cfg  setup.py
src/primo-arm-r00/launch/: display.launch.py
src/primo-arm-r00/urdf/: arm.urdf  arm.urdf.xacro
src/primo-arm-r01/: package.xml  setup.cfg  setup.py
src/primo-arm-r01/launch/: display.launch.py
src/primo-arm-r01/urdf/: output.urdf  primio-arm-r01.urdf.xacro  primo-arm-r01.urdf.xacro
src/primo_dynamixel_driver/: package.xml  setup.cfg  setup.py
src/primo_dynamixel_driver/primo_dynamixel_driver/: joint_publisher.py
