<package format="3">
  <name>primo-arm-r01</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jeff@todo.todo">jeff</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

